# pdpl-scanner

./: .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  README.md  SECURITY.md  action.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pdpl-scan.yml  publish.yml
controls/: pdpl-controls.yaml
docs/: controls-catalog.md  coverage-map.md  entity-types.md  regulatory-references.md
examples/: pdpl.config.yaml  sample-findings.json  sample-report.md
pdpl_scanner/: __init__.py  _meta.py  cli.py  controls.py  entity_profiles.py  questionnaire.py  report.py  rules.py  scanner.py
skill/: SKILL.md
skill/references/: triage-guide.md
tests/: test_scanner.py
tests/fixtures/sample_app/: api.js  clean.py  signup.jsx
