[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pdpl-scanner"
version = "1.1.0"
description = "Entity-aware compliance scanner for Saudi Arabia's Personal Data Protection Law (PDPL)"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Mohammad AlShammari" }]
keywords = ["pdpl", "saudi", "ksa", "sdaia", "compliance", "privacy", "data-protection", "sast", "security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
# Zero hard runtime dependencies — runs anywhere Python runs.
dependencies = []

[project.optional-dependencies]
yaml = ["PyYAML>=5.1"]   # nicer config parsing; a stdlib fallback works without it
dev = ["pytest>=7.0"]

[project.scripts]
pdpl-scan = "pdpl_scanner.cli:main"

[project.urls]
Homepage = "https://github.com/imohad/pdpl-scanner"
Issues = "https://github.com/imohad/pdpl-scanner/issues"

[tool.setuptools]
packages = ["pdpl_scanner"]

[tool.setuptools.package-data]
pdpl_scanner = ["../controls/*.yaml"]
